crates/pardosa-schema/tests/compile_fail/string_field_rejected.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    name: String,
}
fn main() {}
